[tool.poetry]
name = "nanodis"
version = "0.1.0"
description = "A python miniature Redis-like db"
authors = ["Gustavo Cavalcante <nowayhecodes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
gevent = "^21.12.0"
gevent-websocket = "^0.10.1"
numba = "^0.55.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
sure = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
